// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Italic lex("*a
b*") .render() 1`] = `
"[i]a
b[/i]"
`;

exports[`Italic lex("*a
b*") .tokens 1`] = `
[
  Text {
    "content": "a
b",
    "literal": "a
b",
    "scope": "inline",
  },
]
`;

exports[`Italic lex("*a_b*") .render() 1`] = `"[i]a_b[/i]"`;

exports[`Italic lex("*a_b*") .tokens 1`] = `
[
  Text {
    "content": "a_b",
    "literal": "a_b",
    "scope": "inline",
  },
]
`;

exports[`Italic lex("*foo \\* bar*") .render() 1`] = `"[i]foo * bar[/i]"`;

exports[`Italic lex("*foo \\* bar*") .tokens 1`] = `
[
  Text {
    "content": "foo \\* bar",
    "literal": "foo \\* bar",
    "scope": "inline",
  },
]
`;

exports[`Italic lex("*foo* bar") .render() 1`] = `"[i]foo[/i]"`;

exports[`Italic lex("*foo* bar") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Italic lex("*foo*") .render() 1`] = `"[i]foo[/i]"`;

exports[`Italic lex("*foo*") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Italic lex("_foo_") .render() 1`] = `"[i]foo[/i]"`;

exports[`Italic lex("_foo_") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;
